--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
                 <button onclick="alert('Selam')">Tikla</button>
+                <p>BBu da rastgele</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
